[package]
name = "stasher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "uuid", "chrono"] }
lancedb = "0.26"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
arrow-array = "57.3"
arrow-schema = "57.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fastembed = "5.11"
similar = "2.4"
walkdir = "2.4"
dotenvy = "0.15"
blake3 = "1.5"
